p2/confs/apps/postgres.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webapp
    tier: database
  name: postgres
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
      tier: database
  template:
    metadata:
      labels:
        app: webapp
        tier: database
    spec:
      containers:
      - image: postgres
        name: postgres
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webapp
    tier: database
  name: postgres
  namespace: default
spec:
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: webapp
    tier: database
